# crankshaft.core

./: .clang-tidy  .gitignore  .yamllint  CMakeLists.txt  DELIVERABLES_COMPLETE.md  Doxyfile  PHASE_3_COMPLETION_SUMMARY.md  PROJECT_COMPLETE_QUALITY_SCAN_OPTIMISATION.md  QUALITY_SCAN_DOCUMENTATION_INDEX.md  QUALITY_SCAN_OPTIMISATION_COMPLETE.md  QUALITY_SCAN_OPTIMISATION_IMPLEMENTATION.md  QUALITY_SCAN_README.md  QUALITY_SCAN_TEAM_CHECKLIST.md  README.md  convert-cpp.py
.github/: BUILD_FLAGS_VERIFICATION.md  DEPENDENCY_STRATEGY.md  copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/scripts/debug/: IMPLEMENTATION_SUMMARY.md  INVESTIGATION_GUIDE.md  QUICK_REFERENCE.md  (+4 more)
.github/templates/: success-criteria-checklist.md
.github/workflows/: apt-publish.yml  auto-wiki-docs.yml  build-pi-gen-lite.yml  build.yml  cd.yml  changelog.yml  ci.yml  post-quality-comment.yml  quality-scan.yml  release-from-pi-gen.yml  release-notes.yml  release.yml  trigger-apt-publish.yml
cmake/: CrankshaftAasdk.cmake  DebPackageFilename.cmake  DownloadMaterialDesignIcons.cmake
core/: CMakeLists.txt  WebSocketServer.cpp  main.cpp
core/hal/: DeviceHAL.cpp  DeviceHAL.h  HALManager.cpp  HALManager.h  HostHAL.cpp  HostHAL.h  MockDeviceHAL.cpp  MockDeviceHAL.h  MockHostHAL.cpp  MockHostHAL.h  MockVehicleHAL.cpp  MockVehicleHAL.h  VehicleHAL.cpp  VehicleHAL.h
docker/: Dockerfile.build  Dockerfile.test
docs/: CHANGELOG.md  CI_CD_QUALITY_SCAN_CONFIG.md  CI_FIX_AND_DOCUMENTATION_SUMMARY.md  CODE_DOCUMENTATION_AUDIT.md  CODE_REVIEW_CHECKLIST.md  CODING_DOCUMENTATION_GUIDELINES.md  CPP_STANDARDS_GAP_ANALYSIS.md  DEVELOPMENT.md  DOCUMENTATION_AUDIT_CHECKLIST.md  DOCUMENTATION_AUDIT_COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX_AND_NAVIGATION.md  EXTENSION_FRAMEWORK_GUIDE.md  FEATURE_003_SUMMARY.md  HAL_COMPREHENSIVE_DOCUMENTATION.md  PACKAGING_COMPARISON.md  QT6_QML_MODULES_SPECIFICATION.md  QUALITY_SCAN_OPTIMISATION_SUMMARY.md  QUALITY_SCAN_VERIFICATION.md  QUICK_COMMANDS.md  SESSION_SUMMARY_2026_01_11.md  SYSTEM_ARCHITECTURE_OVERVIEW.md  UI_ARCHITECTURE_DOCUMENTATION.md  UI_EVENT_STANDARDS.md  android_auto_quick_guide.md  phase_3_testing_summary.md  protobuf_packaging_strategy.md  quality_scan_optimisation.md
docs/ci-cd/: 00-START-HERE.md  000-WELCOME.md  COMPLETION_REPORT.md  DELIVERABLES.md  README.md  architecture-decisions.md  developer-handbook.md  maintainer-handbook.md  pi-gen-images.md  release-process.md  troubleshooting.md  workflow-guide.md
docs/doxybook/: config.json
docs/fix_summaries/: about_acknowledgements_sbom_ci.md  android_auto_usb_connection_fix.md  ci_workflow_boolean_input_fix.md  modern_responsive_ui_fix_summary.md  phase_5_completion_summary.md  phase_5_final_completion.md  pi-gen-stage-discovery-fix.md  qml_module_architecture_fix.md  qt6_linking_and_aa_service_fixes_summary.md
image_builder/pi-gen-stages/: config-template
image_builder/scripts/: build-docker-debug.sh  build-docker.sh  generate-build-metadata.sh  validate-image.sh
packaging/core/: postinst  prerm
packaging/ui/: prerm
packaging/ui-slim/: control  crankshaft-slim-ui.service  postinst  prerm
scripts/: batch-convert.sh  build-deb-slim-ui.sh  build.sh  check_license_headers.sh  collect-android-diagnostics-extended.sh  collect-android-diagnostics.sh  export_run_logs.ps1  fix-line-endings.sh  generate-coverage.sh  install_opencardev_repo.sh  modernize-returns.py  modernize.sh  modernize_cpp.py  quality-check.sh
specs/001-rpi-image/: plan.md  quickstart.md  spec.md  tasks.md
specs/001-slim-aa-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-infotainment-androidauto/: tasks.md
specs/003-github-actions-cicd/: ANALYSIS_REPORT.md  plan.md  spec.md  tasks.md
specs/004-buildroot-image/: spec.md
specs/005-modern-responsive-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-modern-responsive-ui/: spec.md
tests/: CMakeLists.txt
tests/integration/: test_aa_lifecycle.cpp  test_extension_lifecycle.cpp  test_settings_persistence.cpp
tests/ui/: test_layouts.qml  test_settings.qml
tests/unit/: test_contract_schemas.cpp  test_websocket_validation.cpp
tools/aa_test/: CMakeLists.txt  build.sh  main.cpp
ui/: CMakeLists.txt  SettingsModel.cpp  SettingsModel.h  SettingsRegistry.cpp  SettingsRegistry.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp  qmldir
ui-slim/: CMakeLists.txt  CONTRIBUTING.md  README.md  qml.qrc
ui-slim/qml/: AAProjectionView.qml  ConnectionStatusView.qml  DeviceSelectionDialog.qml  ErrorDialog.qml  ReconnectionPrompt.qml  SettingsPanel.qml  Theme.qml  ThemeManager.qml  ViewNavigationController.qml  main.qml
ui-slim/qml/components/: ConnectionPreferenceToggle.qml  FactoryResetButton.qml  SettingsSlider.qml  ThemeToggle.qml
ui-slim/src/: AndroidAutoFacade.cpp  AndroidAutoFacade.h  AudioBridge.cpp  AudioBridge.h  AudioVolumeController.cpp  AudioVolumeController.h  ConnectionStateMachine.cpp  ConnectionStateMachine.h  DeviceManager.cpp  DeviceManager.h  DisplayBrightnessController.cpp  DisplayBrightnessController.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h  PreferencesFacade.cpp  PreferencesFacade.h  ServiceProvider.cpp  ServiceProvider.h  SettingsMigration.cpp  SettingsMigration.h  TouchEventForwarder.cpp  TouchEventForwarder.h  main.cpp
ui-slim/tests/: CMakeLists.txt  test_android_auto_facade.cpp  test_audio_failure_scenarios.cpp  test_connection_state_machine.cpp  test_preferences_facade.cpp  test_slim_settings_persistence.cpp
ui/i18n/: ui_en_GB.ts
ui/qml/: AndroidAutoScreen.qml  HomeScreen.qml
ui/qml/Components/: Icon.qml
ui/qml/components/: AndroidAutoStatusOverlay.qml  AppButton.qml  Card.qml  ConsentDialog.qml  CrankshaftComponents.h  LayoutUtils.qml  Theme.qml  components.cpp  qmldir
ui/qml/models/: AndroidAutoStatus.qml  DisplayModel.qml  SettingsModel.qml  Strings.qml
ui/qml/screens/: AndroidAutoScreen.qml  BluetoothSettingsPage.qml  HomeScreen.qml  Main.qml  MediaScreen.qml  ProfilesPage.qml  SettingsScreen.qml  ToolsPage.qml  WiFiSettingsPage.qml
(+67 files in other folders)
